# textforge

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  cli.ts  config.ts  decision-tree.rules.md  eslint.config.js  lefthook.yml  logger.ts  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
compiler/: badges.ts  cli-utils.ts  compile-all.ts  errors.ts  index.ts  quiz-compiler.ts  quiz-schema.ts  schema.ts  types.ts
core/: badges.yml  base-template.html  quiz-template.html  style-guide.md  template-blank.md  template.md
docs/: ai-workflow.md  deep-dive.md  renderers.md
editor/: .gitignore  .npmignore  README.md  WINDOWS_BUILD.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
editor/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
editor/src-tauri/.cargo/: config.toml
editor/src-tauri/capabilities/: default.json
editor/src-tauri/src/: lib.rs  main.rs  security.rs
editor/src-tauri/src/commands/: ai.rs  fs.rs  git.rs  mod.rs  sidecar.rs
output/: example-advanced-inputs-tree.html  example-azure-fundamentals-quiz.html  example-multicloud-compute-quiz.html  example-multicloud-compute-tree.html
prompts/: README.md
scripts/: bump-readme-version.ts  check-env.ts  compile-public.ts  init-spec-repo.ts  init.ts  run-shared-tests.ts  setup.ts  stage-editor-bundle.ts
tests/: agent-roles.test.mjs  badgeCssParser.test.ts  badgeMatching.test.ts  badgeResolver.test.ts  baselines.ts  ci-scripts.test.ts  (+46 more)
(+212 files in other folders)
